--- a/py_free/index.html
+++ b/py_free/index.html
@@ -35,15 +35,16 @@
         body h1{
             font-size: 155px;
         }
+
         @media(max-width: 700px){
             body{
-                margin: 10px;
+                margin: 15px;
             }
             body h1{
-                font-size: 3vw;
+                font-size: 30vw;
             }
-            body h2{
-               font-size: 2vw;
+            body p{
+               font-size: 7vw;
             }
 
         }
