--- a/py_free/index.html
+++ b/py_free/index.html
@@ -37,8 +37,14 @@
         }
 
         @media(max-width: 700px){
+
+            html, body{
+            width: 95vw;
+            height: 95vh;
+            overflow: hidden;
+            }
             body{
-                margin: 15px;
+                margin: 10px;
             }
             body h1{
                 font-size: 30vw;
